--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+
 * {
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
